# math-series

./: .coverage  .noseids  README.md  math_series.py  pyproject.toml
math_series/: math_series.py  series.py
tests/: test_series.py  tests_math_series.py
