[tool.poetry]
name = "math-series"
version = "0.1.0"
description = ""
authors = ["Amber Falbo <amberannfalbo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
nose = "^1.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
